# fan455_piano_synthesis

./: LICENSE  README.md  loudness.py  test_02 hammer-string interaction.py
project/: Cargo.toml  mathfunc.py  piano_params_05.toml  plot.py  test_01 basis function v3.py  test_03 soundboard geometry v4.py  tfa.py
project/data/: soundboard_01.txt
project/fan455_piano_python/: mathfunc.py  others.py  plot.py  test_02 hammer-string interaction.py  test_05 analysis v6.py  test_05 analysis v7.py  test_07 mesh v4 order 1.py  test_07 mesh v5 order 3.py  test_09 damping.py
project/fan455_piano_rust/: Cargo.toml
project/fan455_piano_rust/src/fan455_arrf64/: Cargo.toml
project/fan455_piano_rust/src/fan455_arrf64/src/: arrf64_basic.rs  arrf64_blas_lapack.rs  arrf64_blas_lapack_struct.rs  arrf64_dyn_arr1.rs  arrf64_dyn_arr2.rs  arrf64_dyn_special.rs  arrf64_sparse.rs  arrf64_sparse_mat.rs  arrf64_sta_arr1.rs  arrf64_sta_arr2.rs  lib.rs
project/fan455_piano_rust/src/fan455_arrf64_macro/src/: lib.rs
project/fan455_piano_rust/src/fan455_math_array/: Cargo.toml
project/fan455_piano_rust/src/fan455_math_array/src/: lib.rs  math_array_func.rs  math_array_integrate.rs  math_array_optimize.rs  math_array_struct.rs
project/fan455_piano_rust/src/fan455_math_scalar/: Cargo.toml
project/fan455_piano_rust/src/fan455_math_scalar/src/: lib.rs  math_scalar_func.rs  math_scalar_trait.rs  math_scalar_type.rs
project/fan455_piano_rust/src/fan455_piano_lib/: Cargo.toml
project/fan455_piano_rust/src/fan455_piano_lib/src/: lib.rs  piano_air.rs  piano_bridges.rs  piano_fem_1d.rs  piano_fem_3d.rs  piano_fem_basic.rs  piano_finite_element.rs  piano_io.rs  piano_model.rs  piano_preprocess.rs  piano_ribs.rs  piano_soundboard.rs  piano_strings.rs  piano_vibration.rs
project/fan455_piano_rust/src/fan455_util/: Cargo.toml
project/fan455_piano_rust/src/fan455_util/src/: lib.rs  util_basic.rs  util_cmd_parser.rs  util_io.rs  util_map.rs  util_npy.rs  util_string.rs  util_trait.rs
project/fan455_piano_rust/src/fan455_util_macro/: Cargo.toml
project/fan455_piano_rust/src/fan455_util_macro/src/: lib.rs
project/mesh/: piano_02.geo
project/src/fan455_arrf64/: build.rs
project/src/fan455_arrf64/src/: arrf64_dyn_arr1.rs  arrf64_dyn_arr2.rs  arrf64_dyn_special.rs  lib.rs
project/src/fan455_arrf64_macro/: Cargo.toml
project/src/fan455_math_array/src/: math_array_func.rs
project/src/fan455_math_scalar/: Cargo.toml
project/src/fan455_math_scalar/src/: math_scalar_func.rs
project/src/fan455_piano_lib/src/: piano_bridges.rs  piano_finite_element.rs  piano_preprocess.rs  piano_soundboard.rs
project/src/fan455_util/: Cargo.toml
project/src/fan455_util/src/: lib.rs  util_basic.rs
project/src/fan455_util_macro/src/: lib.rs
